force-app/main/default/objects/copado__User_Story_Commit__c/copado__User_Story_Commit__c.object-meta.xml
<CustomObject>
    <label>User Story Commit</label>
    <nameField>
        <label>US Commit</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Story Commits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>