force-app/main/default/objects/copado__User_Story_Commit__c/fields/copado__CommitMessage__c.field-meta.xml
<CustomField>
    <fullName>copado__CommitMessage__c</fullName>
    <formula>copado__Snapshot_Commit__r.copado__Commit_Message__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commit Message</label>
    <type>Text</type>
</CustomField>