force-app/main/default/objects/copado__User_Story_Commit__c/fields/copado__Snapshot_Commit__c.field-meta.xml
<CustomField>
    <fullName>copado__Snapshot_Commit__c</fullName>
    <label>Snapshot Commit</label>
    <referenceTo>copado__Git_Org_Commit__c</referenceTo>
    <relationshipLabel>User Story Commits</relationshipLabel>
    <relationshipName>User_Story_Commits</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>