force-app/main/default/objects/copado__User_Story_Commit__c/fields/copado__Status__c.field-meta.xml
<CustomField>
    <fullName>copado__Status__c</fullName>
    <formula>TEXT(copado__Snapshot_Commit__r.copado__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>