force-app/main/default/objects/copado__User_Story_Commit__c/fields/copado__View_in_Git__c.field-meta.xml
<CustomField>
    <fullName>copado__View_in_Git__c</fullName>
    <formula>HYPERLINK(IF(AND(NOT(ISNULL(copado__Snapshot_Commit__r.copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c)),	copado__Snapshot_Commit__r.copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c != &apos;&apos;),IF(AND(NOT(ISPICKVAL(copado__Snapshot_Commit__r.copado__Git_Backup__r.copado__Git_Repository__r.copado__Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(copado__Snapshot_Commit__r.copado__Git_Backup__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),copado__Snapshot_Commit__r.copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c +  copado__Snapshot_Commit__r.copado__Commit_Id__c,
IF(CONTAINS(copado__Snapshot_Commit__r.copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c,&apos;[COMMIT_ID]&apos;),SUBSTITUTE(copado__Snapshot_Commit__r.copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c,&apos;[COMMIT_ID]&apos;,copado__Snapshot_Commit__r.copado__Commit_Id__c),copado__Snapshot_Commit__r.copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c + copado__Snapshot_Commit__r.copado__Commit_Id__c)),IF(AND(NOT(ISNULL(copado__User_Story__r.copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Commit_Base_URL__c)), copado__User_Story__r.copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Commit_Base_URL__c != &apos;&apos;), IF(
AND(NOT(ISPICKVAL(copado__User_Story__r.copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(copado__User_Story__r.copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),copado__User_Story__r.copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Commit_Base_URL__c +  copado__Snapshot_Commit__r.copado__Commit_Id__c,
IF(CONTAINS(copado__User_Story__r.copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Commit_Base_URL__c,&apos;[COMMIT_ID]&apos;),
SUBSTITUTE(copado__User_Story__r.copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Commit_Base_URL__c,&apos;[COMMIT_ID]&apos;,copado__Snapshot_Commit__r.copado__Commit_Id__c),copado__User_Story__r.copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Commit_Base_URL__c + copado__Snapshot_Commit__r.copado__Commit_Id__c
)),IF(AND(NOT(ISNULL(copado__User_Story__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Commit_Base_URL__c)), copado__User_Story__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Commit_Base_URL__c != &apos;&apos;), 
IF(AND(NOT(ISPICKVAL(copado__User_Story__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(copado__User_Story__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),
copado__User_Story__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Commit_Base_URL__c +  copado__Snapshot_Commit__r.copado__Commit_Id__c,
IF(CONTAINS(copado__User_Story__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Commit_Base_URL__c,&apos;[COMMIT_ID]&apos;),
SUBSTITUTE(copado__User_Story__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Commit_Base_URL__c,&apos;[COMMIT_ID]&apos;,copado__Snapshot_Commit__r.copado__Commit_Id__c),
copado__User_Story__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Commit_Base_URL__c + copado__Snapshot_Commit__r.copado__Commit_Id__c
)),&apos;&apos;))),LEFT(copado__Snapshot_Commit__r.copado__Commit_Id__c, 7))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View in Git</label>
    <type>Text</type>
</CustomField>